--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,15 +29,18 @@ environment:
 before_build:
 - cmd: |-
     set PATH=%PYTHON%;%PYTHON%\Scripts;%PATH%
-#    python -m pip install --upgrade pip
-#    pip3.7 install six
+    python -m pip install --upgrade pip
+    pip3.7 install flake8
 
     
 build_script:
 - cmd: |-
-    set PATH=%PYTHON%;%PATH%
-    python buildplugin
+    python buildplugin --language
  
+test_script:
+- cmd: |-
+    flake8 buildplugin
+    flake8 .
 
 artifacts:
   - path: '*.zip'
