--- a/plugin.xml
+++ b/plugin.xml
@@ -6,8 +6,8 @@
 <description>Manipulate Spans, Divs and other tags.</description>
 <engine>python3.4</engine>
 <engine>python2.7</engine>
-<version>0.4.5</version>
+<version>0.5.0</version>
 <oslist>osx,unx,win</oslist>
 <autostart>true</autostart>
-<autoclose>true</autoclose>
+<autoclose>false</autoclose>
 </plugin>
