--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,6 +24,7 @@ init:
 environment:
   global:
     PYTHON: C:\Python37-x64
+    QT: C:\Qt\5.12\msvc2017_64
 
 
 before_build:
@@ -35,6 +36,7 @@ before_build:
     
 build_script:
 - cmd: |-
+    set PATH=%QT%\bin;%PATH%
     python buildplugin --language
  
 test_script:
