--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -37,5 +37,6 @@ jobs:
         flake8 .
     - name: Build Plugin
       run: |
+        sudo apt-get update
         sudo apt-get install -y qttools5-dev-tools
         python buildplugin --language
