--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -40,3 +40,7 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y qttools5-dev-tools
         python buildplugin --language
+    - uses: actions/upload-artifact@v2
+      with:
+        name: tagmech-artifact
+        path: ./*.zip
