--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -16,30 +16,47 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
-    - uses: actions/cache@main
+
+    - name: Cache Qt
+      id: cache-qt
+      uses: actions/cache@v2
+      with:
+        path: ${{runner.workspace}}/Qt
+        key: ${{ runner.os }}-qttools-${{ hashFiles('**/reset-caches.txt') }}
+  
+    - name: Install Qt
+      uses: jurplel/install-qt-action@v2
+      with:
+        version: '5.9.5'
+        dir: ${{runner.workspace}}/Qt
+        setup-python: 'false'
+        tools-only: true
+        cached: ${{ steps.cache-qt.outputs.cache-hit }}
+
+    - uses: actions/cache@v2
       with:
         path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-test-build
-        restore-keys: |
-            ${{ runner.os }}-pip-test-build
+        key: ${{ runner.os }}-pipcache-${{ hashFiles('**/reset-caches.txt') }}
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install flake8
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
     - name: Lint with flake8
       run: |
+        which lrelease
         flake8 buildplugin
         flake8 .
     - name: Build Plugin
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y qttools5-dev-tools
-        python buildplugin --language
+      run: python buildplugin --language
+
     - uses: actions/upload-artifact@v2
       with:
         name: tagmech-artifact
