Update cron workflow

--- a/.github/workflows/check_versions.yml
+++ b/.github/workflows/check_versions.yml
@@ -1,7 +1,7 @@
 name: update remote versions
 on: 
   schedule:
-    - cron: "*/5 * * * *"
+    - cron: "*/10 * * * *"
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -11,4 +11,4 @@ jobs:
           ref: gh-pages
 
       - name: remote query
-        run: python $GITHUB_WORKSPACE/.github/workflows/vers_update.py -r sigil-ebook/sigil -p [dummy]
+        run: python $GITHUB_WORKSPACE/.github/workflows/vers_update.py -p $GITHUB_WORKSPACE
