--- a/.github/workflows/check_versions.yml
+++ b/.github/workflows/check_versions.yml
@@ -12,3 +12,11 @@ jobs:
 
       - name: remote query
         run: python $GITHUB_WORKSPACE/.github/workflows/vers_update.py -p $GITHUB_WORKSPACE
+
+      - uses: stefanzweifel/git-auto-commit-action@v4
+      with:
+        commit_user_name: My GitHub Actions Bot
+        commit_user_email: my-github-actions-bot@example.org
+        commit_author: Author <actions@github.com>
+        commit_message: Auto update GitHub Pages latest versions file
+        branch: gh-pages
