--- a/.github/workflows/check_versions.yml
+++ b/.github/workflows/check_versions.yml
@@ -1,7 +1,7 @@
 name: update remote versions
 on: 
   schedule:
-    - cron: "* */2 * * *"
+    - cron: "0 */2 * * *"
 jobs:
   build:
     runs-on: ubuntu-latest
