--- a/plugin.xml
+++ b/plugin.xml
@@ -9,5 +9,5 @@
 <version>0.6.0</version>
 <oslist>osx,unx,win</oslist>
 <autostart>true</autostart>
-<autoclose>false</autoclose>
+<autoclose>true</autoclose>
 </plugin>
