Update gh action workflow

--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -18,6 +18,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
+        path: main
 
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
@@ -56,6 +57,11 @@ jobs:
         flake8 buildplugin
         flake8 .
 
+    - name: Update language files
+      run: |
+        pylupdate5 -verbose -translate-function _t *.py -ts $GITHUB_WORKSPACE/main/translations/template.ts
+        pylupdate5 -verbose -translate-function _t *.py -ts $GITHUB_WORKSPACE/main/translations/tagmechanic_pl.ts
+  
     - name: Commit any language TS files updated
       uses: stefanzweifel/git-auto-commit-action@v4
       with:
@@ -63,9 +69,6 @@ jobs:
         commit_user_email: my-github-actions-bot@example.org
         commit_author: Author <actions@github.com>
         commit_message: Update TS files with 5.9.5 lupdate
-
-    - name: Update language files
-      run: python tsupdate
 
     - name: Build Plugin
       run: python buildplugin --language
