--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -18,7 +18,6 @@ jobs:
     - uses: actions/checkout@v2
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        path: main
 
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
@@ -59,8 +58,8 @@ jobs:
 
     - name: Update language files
       run: |
-        pylupdate5 -verbose -translate-function _t *.py -ts $GITHUB_WORKSPACE/main/translations/template.ts
-        pylupdate5 -verbose -translate-function _t *.py -ts $GITHUB_WORKSPACE/main/translations/tagmechanic_pl.ts
+        pylupdate5 -verbose -translate-function _t *.py -ts ./translations/template.ts
+        pylupdate5 -verbose -translate-function _t *.py -ts ./translations/tagmechanic_pl.ts
   
     - name: Commit any language TS files updated
       uses: stefanzweifel/git-auto-commit-action@v4
