--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -36,6 +36,8 @@ jobs:
       with:
         version: '5.12.3'
         dir: ${{runner.workspace}}/Qt
+        set-env: 'false'
+        tools-only: 'true'
         setup-python: 'false'
         cached: ${{ steps.cache-qt.outputs.cache-hit }}
 
