--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -31,8 +31,13 @@ jobs:
       with:
         version: '5.12.3'
         dir: ${{runner.workspace}}/Qt
-        setup-python: 'true'
+        setup-python: 'false'
         cached: ${{ steps.cache-qt.outputs.cache-hit }}
+
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.8
 
     - name: Install dependencies
       run: |
