--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -8,6 +8,8 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+env:
+  PLUGIN_NAME: "TagMechanic"
 
 jobs:
   build:
@@ -18,6 +20,11 @@ jobs:
     - uses: actions/checkout@v2
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Get tag name
+      if: startswith( github.ref, 'refs/tags/')
+      id: get_tag_name
+      run: echo ::set-output name=TAGNAME::${GITHUB_REF/refs\/tags\//}
 
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
@@ -69,7 +76,23 @@ jobs:
         which lrelease
         python buildplugin --language
 
-    - uses: actions/upload-artifact@v2
+    - name: Upload Artifact
+      if: "contains(github.event.head_commit.message, '[deploy]')"
+      uses: actions/upload-artifact@v2
       with:
         name: tagmech-artifact
         path: ./*.zip
+
+    - name: Create Release
+      if: startswith( github.ref, 'refs/tags/')
+      uses: ncipollo/release-action@v1
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        name: $PLUGIN_NAME ${{ steps.get_tag_name.outputs.TAGNAME }} Released
+        body: |
+          Changes in this Release
+          - First Change
+          - Second Change
+        draft: true
+        prerelease: false
+        artifacts: './*.zip'
