Limit CI artifact retention [deploy]

--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -82,6 +82,7 @@ jobs:
       with:
         name: tagmech-artifact
         path: ./*.zip
+        retention-days: 3
 
     - name: Create Release
       if: startswith( github.ref, 'refs/tags/')
