Allow CI to run on tags

--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -5,9 +5,13 @@ name: Test and Build Tagmechanic plugin
 
 on:
   push:
-    branches: [ master ]
+    tags:
+      - 'v*'
+    branches:
+      - master
   pull_request:
-    branches: [ master ]
+    branches:
+      - master
 env:
   PLUGIN_NAME: "TagMechanic"
 
